...
        {row(<>
          {rowLabel('IP Address')}
          <TextInput
            style={inputStyle}
            value={ip}
            onChangeText={onIpChange}
            placeholder="192.168.1.105"
            placeholderTextColor={theme.colors.onSurfaceSecondary}
            keyboardType="decimal-pad"
            testID={`input-ip-${testID}`}
          />
        </>)}
        {row(<>
...
